--- a/Task-4/Deepweeds_Transfer_Learning.ipynb
+++ b/Task-4/Deepweeds_Transfer_Learning.ipynb
@@ -8,14 +8,22 @@
    },
    "outputs": [],
    "source": [
+    "# import the main PyTorch package\n",
     "import torch\n",
+    "# import PyTorch neural network module utilities (layers, losses, etc.)\n",
     "import torch.nn as nn\n",
+    "# import PyTorch optimizers\n",
     "import torch.optim as optim\n",
+    "# import torchvision transforms for common image preprocessing/augmentation\n",
     "from torchvision import transforms\n",
+    "# import PIL.Image for opening images\n",
     "from PIL import Image\n",
+    "# import os for filesystem path operations\n",
     "import os\n",
+    "# import numpy for numeric utilities (not heavily used below but common)\n",
     "import numpy as np\n",
-    "from sklearn.metrics import classification_report, confusion_matrix"
+    "# import sklearn metrics for final classification reporting\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n"
    ]
   },
   {
@@ -38,11 +46,10 @@
     }
    ],
    "source": [
+    "# import Colab-specific drive mount helper (only works in Google Colab)\n",
     "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n",
-    "# unzip (ZIP)\n",
-    "# !unzip \"/content/drive/MyDrive/data/archive.zip\" -d \"/content/drive/MyDrive/data/\""
+    "# mount the user's Google Drive at /content/drive (interactive permission step in Colab)\n",
+    "drive.mount('/content/drive')\n"
    ]
   },
   {
@@ -78,7 +85,7 @@
     "!mkdir -p \"$EXTRACT_T\n",
     "!unzip -q \"$ZIP_PATH\" -d \"$EXTRACT_TO\"\n",
     "print(\"Extraction complete\")\n",
-    "'''"
+    "'''\n"
    ]
   },
   {
@@ -108,16 +115,23 @@
     }
    ],
    "source": [
+    "# import os (already imported above but repeated in the notebook)\n",
     "import os\n",
     "\n",
+    "# print a short label\n",
     "print(\"Top-level extracted folders/files:\")\n",
+    "# list the top-level directory 'EXTRACT_TO' and print the returned list\n",
     "print(os.listdir(EXTRACT_TO))\n",
     "\n",
-    "# Look one level deeper if needed\n",
+    "# loop through items at top level and if the item is a directory, print a preview of its contents\n",
     "for item in os.listdir(EXTRACT_TO):\n",
+    "    # join path pieces to make a full path to the item\n",
     "    path = os.path.join(EXTRACT_TO, item)\n",
+    "    # check if it is a directory\n",
     "    if os.path.isdir(path):\n",
+    "        # print which folder we are showing contents for\n",
     "        print(f\"\\nContents of {item}:\")\n",
+    "        # print first 10 entries inside that folder to avoid very long output\n",
     "        print(os.listdir(path)[:10])  # show only first\n"
    ]
   },
@@ -143,14 +157,18 @@
     }
    ],
    "source": [
-    "\n",
+    "# set the base path to the extracted dataset\n",
     "main = \"/content/drive/MyDrive/data_extracted\"\n",
     "\n",
-    "# Quick check: list the labels folder\n",
+    "# path to labels folder under main\n",
     "labels_folder = os.path.join(main, \"labels\")\n",
+    "# path to images folder under main\n",
     "images_folder = os.path.join(main, \"images\")\n",
+    "# print whether labels folder exists (True/False)\n",
     "print(\"Labels folder exists:\", os.path.exists(labels_folder))\n",
+    "# print whether images folder exists (True/False)\n",
     "print(\"Images folder exists:\", os.path.exists(images_folder))\n",
+    "# print a sorted slice of files found in the labels folder (first 20)\n",
     "print(\"Labels files:\", sorted(os.listdir(labels_folder))[:20])  # show first 20 label files\n"
    ]
   },
@@ -361,27 +379,44 @@
    },
    "outputs": [],
    "source": [
+    "# ===== IMAGE TRANSFORMS =====\n",
+    "# IMG_SIZE is the square size models like EfficientNet / ResNet expect (commonly 224)\n",
     "IMG_SIZE = 224\n",
     "\n",
+    "# Training transforms (randomized) — used only when training\n",
     "train_transform = transforms.Compose([\n",
+    "    # RandomResizedCrop: pick a random region of the image and scale it to IMG_SIZE.\n",
+    "    # This both crops and resizes, which acts as a strong augmentation.\n",
     "    transforms.RandomResizedCrop(IMG_SIZE),\n",
+    "\n",
+    "    # Random horizontal flip: with probability 0.5 flips image left-right.\n",
     "    transforms.RandomHorizontalFlip(),\n",
+    "\n",
+    "    # Random small rotation: rotates the image by a random angle in ±15 degrees.\n",
+    "    # Helps the model learn rotation-invariant features.\n",
     "    transforms.RandomRotation(15),\n",
+    "\n",
+    "    # Convert PIL Image -> Tensor and scale from [0,255] ints to [0.0,1.0] floats\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(\n",
-    "        mean=[0.485, 0.456, 0.406],\n",
-    "        std=[0.229, 0.224, 0.225]\n",
-    "    )\n",
+    "\n",
+    "    # Normalize channels using ImageNet mean/std.\n",
+    "    # Pretrained models (ImageNet) expect inputs normalized this way.\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                         std=[0.229, 0.224, 0.225])\n",
     "])\n",
     "\n",
+    "# Validation / Test transforms (deterministic) — used for evaluation\n",
     "test_transform = transforms.Compose([\n",
+    "    # Resize the shorter side to 256 pixels (keeps aspect ratio)\n",
     "    transforms.Resize(256),\n",
+    "\n",
+    "    # CenterCrop to IMG_SIZE to get a deterministic view of the image\n",
     "    transforms.CenterCrop(IMG_SIZE),\n",
+    "\n",
+    "    # Convert to tensor and normalize with same mean/std\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(\n",
-    "        mean=[0.485, 0.456, 0.406],\n",
-    "        std=[0.229, 0.224, 0.225]\n",
-    "    )\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                         std=[0.229, 0.224, 0.225])\n",
     "])\n"
    ]
   },
@@ -395,28 +430,41 @@
    "source": [
     "def load_sample(row, image_dir, transform):\n",
     "    \"\"\"\n",
-    "    row: one row from train_df / val_df / test_df\n",
-    "    returns: image tensor, label tensor\n",
+    "    row: a pandas Series containing at least the 'Filename' and 'Label' columns\n",
+    "    returns: (image tensor, label tensor) after applying transform\n",
     "    \"\"\"\n",
+    "    # build image path from image directory + filename in the CSV row\n",
     "    img_path = os.path.join(image_dir, row[\"Filename\"])\n",
+    "    # open the image file and convert to RGB (some images might be grayscale)\n",
     "    image = Image.open(img_path).convert(\"RGB\")\n",
+    "    # apply the supplied torchvision transform pipeline\n",
     "    image = transform(image)\n",
+    "    # convert numeric label to a torch.long tensor (class index)\n",
     "    label = torch.tensor(int(row[\"Label\"]), dtype=torch.long)\n",
+    "    # return the processed image tensor and label tensor\n",
     "    return image, label\n",
     "\n",
     "\n",
     "def get_batch(df, image_dir, transform, batch_size, start_idx):\n",
+    "    # create lists to collect tensors\n",
     "    images = []\n",
     "    labels = []\n",
     "\n",
+    "    # compute the end index for this batch (clamped to length of df)\n",
     "    end_idx = min(start_idx + batch_size, len(df))\n",
+    "    # iterate rows from start_idx up to end_idx (exclusive)\n",
     "    for i in range(start_idx, end_idx):\n",
+    "        # load each sample (image tensor, label tensor)\n",
     "        img, lab = load_sample(df.iloc[i], image_dir, transform)\n",
+    "        # append to lists\n",
     "        images.append(img)\n",
     "        labels.append(lab)\n",
     "\n",
+    "    # stack image tensors into a single batched tensor of shape (B, C, H, W)\n",
     "    images = torch.stack(images)\n",
+    "    # stack label tensors into a single tensor of shape (B,)\n",
     "    labels = torch.stack(labels)\n",
+    "    # move tensors to the device (GPU or CPU)\n",
     "    return images.to(device), labels.to(device)\n"
    ]
   },
@@ -428,33 +476,56 @@
    },
    "outputs": [],
    "source": [
+    "# import timm (Torch Image Models) which provides pretrained architectures\n",
     "import timm\n",
+    "# compute number of distinct classes from the master labels DataFrame\n",
     "num_classes = master_df[\"Label\"].nunique()\n",
     "\n",
+    "# create an EfficientNet-b0 model from timm with pretrained ImageNet weights\n",
     "model = timm.create_model(\"efficientnet_b0\", pretrained=True)\n",
+    "# replace the classifier (final layer) with a new linear layer sized for our num_classes\n",
     "model.classifier = nn.Linear(model.classifier.in_features, num_classes)\n",
+    "# send the model to the device (GPU)\n",
     "model = model.to(device)\n",
+    "# define the loss function as CrossEntropyLoss (combines softmax + NLLLoss)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "def train_epoch(df, transform, optimizer, batch_size=32):\n",
+    "    # put the model into training mode (enables dropout, batchnorm running stats updates)\n",
     "    model.train()\n",
+    "    # counters for accuracy\n",
     "    correct = 0\n",
     "    total = 0\n",
     "\n",
+    "    # iterate through the dataset in steps of batch_size (manual batching)\n",
     "    for i in range(0, len(df), batch_size):\n",
+    "        # get a batch of images and labels starting at index i\n",
     "        images, labels = get_batch(df, IMAGES_DIR, transform, batch_size, i)\n",
     "\n",
+    "        # zero gradients for optimizer\n",
     "        optimizer.zero_grad()\n",
+    "        # forward pass: compute model outputs (logits)\n",
     "        outputs = model(images)\n",
+    "        # compute cross-entropy loss between outputs and true labels\n",
     "        loss = criterion(outputs, labels)\n",
+    "        # backward pass: compute gradients\n",
     "        loss.backward()\n",
+    "        # optimizer step: apply gradients to update parameters\n",
     "        optimizer.step()\n",
     "\n",
+    "        # get predicted class indices (argmax along class dim)\n",
     "        preds = outputs.argmax(1)\n",
+    "        # accumulate correct predictions count\n",
     "        correct += (preds == labels).sum().item()\n",
+    "        # accumulate total samples processed\n",
     "        total += labels.size(0)\n",
     "\n",
-    "    return correct / total\n"
+    "    # return training accuracy for the epoch\n",
+    "    return correct / total\n",
+    "\n"
    ]
   },
   {
@@ -466,21 +537,35 @@
    "outputs": [],
    "source": [
     "def evaluate(df, transform, batch_size=32):\n",
+    "    # set the model to evaluation mode (disables dropout, uses batchnorm running stats)\n",
     "    model.eval()\n",
+    "    # lists to collect predictions and labels from all batches\n",
     "    all_preds = []\n",
     "    all_labels = []\n",
     "\n",
-    "    with torch.no_grad():\n",
+    "    # disable gradient computation for inference (saves memory and compute)\n",
+    "    with torch.no_grad(): \n",
+    "        #Stops gradient tracking → faster + less memory during evaluation\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        # iterate over dataset in batch_size steps\n",
     "        for i in range(0, len(df), batch_size):\n",
+    "            # load batch to device\n",
     "            images, labels = get_batch(df, IMAGES_DIR, transform, batch_size, i)\n",
+    "            # forward pass to get outputs\n",
     "            outputs = model(images)\n",
+    "            # get predicted class indices for this batch\n",
     "            preds = outputs.argmax(1)\n",
     "\n",
+    "            # append predictions and labels (moved to cpu) to lists\n",
     "            all_preds.append(preds.cpu())\n",
     "            all_labels.append(labels.cpu())\n",
     "\n",
+    "    # concatenate all batch tensors into single numpy arrays\n",
     "    all_preds = torch.cat(all_preds).numpy()\n",
     "    all_labels = torch.cat(all_labels).numpy()\n",
+    "    # return arrays (labels, preds) for external metric calculation\n",
     "    return all_labels, all_preds\n"
    ]
   },
@@ -508,14 +593,18 @@
     }
    ],
    "source": [
+    "# freeze all parameters in the model (no gradient updates)\n",
     "for p in model.parameters():\n",
     "    p.requires_grad = False\n",
     "\n",
+    "# unfreeze the classifier head parameters only (we just replaced it earlier)\n",
     "for p in model.classifier.parameters():\n",
     "    p.requires_grad = True\n",
     "\n",
+    "# create optimizer that will only optimize parameters of the classifier head\n",
     "optimizer = optim.Adam(model.classifier.parameters(), lr=1e-3)\n",
     "\n",
+    "# run 5 epochs of training on only the classifier head (partial fine-tuning)\n",
     "for epoch in range(5):\n",
     "    acc = train_epoch(train_df, train_transform, optimizer)\n",
     "    print(f\"Partial FT Epoch {epoch+1}: Train Acc = {acc:.4f}\")\n"
@@ -545,11 +634,14 @@
     }
    ],
    "source": [
+    "# unfreeze all parameters so they can be trained now\n",
     "for p in model.parameters():\n",
     "    p.requires_grad = True\n",
     "\n",
+    "# create optimizer for the whole model parameters but at a lower learning rate\n",
     "optimizer = optim.Adam(model.parameters(), lr=5e-5)\n",
     "\n",
+    "# run 5 epochs of full fine-tuning (now backbone + head will be updated)\n",
     "for epoch in range(5):\n",
     "    acc = train_epoch(train_df, train_transform, optimizer)\n",
     "    print(f\"Full FT Epoch {epoch+1}: Train Acc = {acc:.4f}\")\n"
