--- a/task-3/MLP_scikit.ipynb
+++ b/task-3/MLP_scikit.ipynb
@@ -205,15 +205,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove every data with ?\n",
-    "for col in df.columns:\n",
-    "    df[col] = df[col].replace('?', pd.NA)\n",
-    "rows_to_keep = []\n",
-    "for i in range(len(df)):\n",
-    "    if not df.iloc[i].isna().any():\n",
-    "        rows_to_keep.append(i)\n",
-    "df = df.iloc[rows_to_keep]\n",
-    "df = df.reset_index(drop=True)"
+    "for col in df.columns:                                 # iterate over each column name\n",
+    "    df[col] = df[col].replace('?', pd.NA)              # replace '?' placeholder with pandas' NA (missing value marker)\n",
+    "rows_to_keep = []                                      # prepare list to collect indices of rows without any NA\n",
+    "for i in range(len(df)):                               # loop over all row indices\n",
+    "    if not df.iloc[i].isna().any():                    # check if current row has NO missing values\n",
+    "        rows_to_keep.append(i)                         # keep this row index if it's complete\n",
+    "df = df.iloc[rows_to_keep]                             # filter DataFrame to only the complete rows\n",
+    "df = df.reset_index(drop=True)                         # reset index so it runs 0..N-1 again"
    ]
   },
   {
@@ -258,8 +257,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=['income'])   # all input features\n",
-    "y = (df['income'] == '>50K').astype(int)   # binary target"
+    "X = df.drop(columns=['income'])                        # all input features (drop target column)\n",
+    "y = (df['income'] == '>50K').astype(int)               # binary target: 1 if income >50K, else 0"
    ]
   },
   {
@@ -434,20 +433,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_cols = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
-    "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
     "\n",
-    "#so basically we are converting these so that we use a number instead of a value, so like for male we can use 1 and for female 0\n",
+    "cat_cols = X.select_dtypes(include=['object', 'category']).columns.tolist()  # list of categorical column names\n",
+    "num_cols = X.select_dtypes(include=[np.number]).columns.tolist()            # list of numeric column names\n",
+    "\n",
+    "# so basically we are converting these so that we use a number instead of a value, so like for male we can use 1 and for female 0\n",
     "\n",
     "# one-hot encode categorical features\n",
-    "X_cat = pd.get_dummies(X[cat_cols], drop_first=True)\n",
+    "X_cat = pd.get_dummies(X[cat_cols], drop_first=True)   # convert categorical cols into binary indicator columns, drop_first avoids redundant column\n",
     "\n",
     "# scale numeric features\n",
-    "scaler = StandardScaler()\n",
-    "X_num = pd.DataFrame(scaler.fit_transform(X[num_cols]), columns=num_cols, index=X.index)\n",
+    "scaler = StandardScaler()                              # create standard scaler to zero-center and scale to unit variance\n",
+    "X_num = pd.DataFrame(scaler.fit_transform(X[num_cols]), columns=num_cols, index=X.index)  # fit scaler on numeric cols and transform them, keep original column names & index\n",
     "\n",
     "# combine these and we get what we want\n",
-    "X_prepared = pd.concat([X_num, X_cat], axis=1)"
+    "X_prepared = pd.concat([X_num, X_cat], axis=1)         # concatenate numeric and one-hot encoded categorical features into final feature matrix\n"
    ]
   },
   {
@@ -494,24 +494,50 @@
    "source": [
     "# traing\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X_prepared, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "                                                       # first split: 70% train, 30% temp (will be split into val/test); stratify keeps class distribution\n",
     "X_val, X_test, y_val, y_test     = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp)\n",
+    "                                                       # split temp into 50% val and 50% test -> each gets 15% of original\n",
     "\n",
     "# scikit classifier\n",
     "model = MLPClassifier(hidden_layer_sizes=(64,32), activation='relu',solver='adam', learning_rate_init=1e-3,max_iter=200, random_state=42)\n",
+    "\n",
+    "# create MLP with two hidden layers (64 then 32 neurons), ReLU activation, Adam optimizer, learning rate 0.001, max 200 iterations\n",
+    "\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "def report(name, Xr, yr):\n",
     "    probs = model.predict_proba(Xr)[:,1]\n",
     "    preds = (probs >= 0.5).astype(int)\n",
     "    print(f\"--- {name} ---\")\n",
-    "    print(\"Accuracy :\", accuracy_score(yr, preds))\n",
-    "    print(\"Precision:\", precision_score(yr, preds))\n",
-    "    print(\"Recall   :\", recall_score(yr, preds))\n",
-    "    print(\"F1       :\", f1_score(yr, preds))\n",
-    "    print(\"ROC AUC  :\", roc_auc_score(yr, probs))\n",
+    "    print(\"Accuracy :\", accuracy_score(yr, preds)) #correct predictions/total predictions\n",
+    "    print(\"Precision:\", precision_score(yr, preds)) #tp/tp+fp\n",
+    "    print(\"Recall   :\", recall_score(yr, preds)) #tp/tp+fn\n",
+    "    print(\"F1       :\", f1_score(yr, preds)) #2.precision.recall  / precision + recall \n",
+    "    print(\"ROC AUC  :\", roc_auc_score(yr, probs)) #ROC AUC measures how well your model ranks positives above negatives\n",
+    "    '''\n",
+    "    0.5 = random guessing\n",
+    "\n",
+    "    0.7 = decent\n",
+    "\n",
+    "    0.8 = strong\n",
+    "\n",
+    "    0.9+ = excellent'''\n",
     "    print(\"Confusion matrix:\\n\", confusion_matrix(yr, preds))\n",
     "    print()\n",
+    "##\n",
+    "'''\n",
+    "TN FP\n",
+    "FN TP\n",
     "\n",
+    "TN (True Negative): correctly predicted ≤50K\n",
+    "\n",
+    "FP (False Positive): predicted >50K but actually ≤50K\n",
+    "\n",
+    "FN (False Negative): predicted ≤50K but actually >50K\n",
+    "\n",
+    "TP (True Positive): correctly predicted >50K\n",
+    "\n",
+    "'''\n",
     "report(\"Validation\", X_val, y_val)\n",
     "report(\"Test\", X_test, y_test)"
    ]
